# crypto-ai-hedge-fund

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
notebooks/: crypto_hf.ipynb  run_crypto_hf.ipynb
src/agents/: pm_agent.py  risk_guardian.py  runtime.py
src/api/: server.py
src/backtest/: engine.py
src/cli/: fetch_ccxt.py
src/data_api/: ccxt_ingestor.py
src/evaluation/: report.py
src/models/: econometric.py  ml.py
src/plots/: plotting.py
src/portfolio/: optimizers.py  rebalance.py
src/strategies/: baseline.py
src/utils/: data.py  metrics.py
tests/: test_backtest.py  test_metrics.py
