[tool.poetry]
name = "crypto-ai-hedge-fund"
version = "0.1.0"
description = "Agent-based automated cryptocurrency trading & risk management (educational, reproducible)."
authors = ["Egor Fadeev, email = efadeev3@gmail.com"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
lightgbm = "^4.3.0"
ccxt = "^4.3.89"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
tenacity = "^8.5.0"
python-dateutil = "^2.9.0.post0"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
